--- a/how-it-works/education-on-sustainability.html
+++ b/how-it-works/education-on-sustainability.html
@@ -25,19 +25,19 @@
                     <img src="../assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
                 <div class="right">
-                    <a href="index.html" class="menu-item">
+                    <a href="../index.html" class="menu-item">
                         <span>Home</span>
                     </a>
-                    <a href="about.html" class="menu-item">
+                    <a href="../about.html" class="menu-item">
                         <span>About Us</span>
                     </a>
-                    <a href="howitworks.html" class="menu-item text-active">
+                    <a href="../howitworks.html" class="menu-item text-active">
                         <span>How It Works</span>
                     </a>
-                    <a href="products.html" class="menu-item">
+                    <a href="../products.html" class="menu-item">
                         <span>Services</span>
                     </a>
-                    <a href="contactus.html" class="menu-item">
+                    <a href="../contactus.html" class="menu-item">
                         <span>Contact Us</span>
                     </a>
                 </div>
