--- a/how-it-works/sustainability-compliance.html
+++ b/how-it-works/sustainability-compliance.html
@@ -25,19 +25,19 @@
                     <img src="../assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
                 <div class="right">
-                    <a href="index.html" class="menu-item">
+                    <a href="../index.html" class="menu-item">
                         <span>Home</span>
                     </a>
-                    <a href="about.html" class="menu-item">
+                    <a href="../about.html" class="menu-item">
                         <span>About Us</span>
                     </a>
-                    <a href="howitworks.html" class="menu-item text-active">
+                    <a href="../howitworks.html" class="menu-item text-active">
                         <span>How It Works</span>
                     </a>
-                    <a href="products.html" class="menu-item">
+                    <a href="../products.html" class="menu-item">
                         <span>Services</span>
                     </a>
-                    <a href="contactus.html" class="menu-item">
+                    <a href="../contactus.html" class="menu-item">
                         <span>Contact Us</span>
                     </a>
                 </div>
@@ -45,67 +45,24 @@
         </div>
     </header>
 
-    <section class="section_banner">
-        <div class="container">
-            <div class="d-flex mb-4">
-                <div class="col">
-                    <h2 class="title">How It Works</h2>
-                </div>
-                <div class="col">
-                    <img src="../assets/img/howitworks.png" alt="" style="margin-top: -75px;">
-                </div>
-            </div>
-        </div>
+    <section class="section_banner" style="width: 100%; height: 550px; overflow: hidden; margin-bottom: 3rem; background-image: url('../assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png'); background-size: cover; background-position: center;">
+        
     </section>
 
-    <section class="section_2_columns_with_image">
+    <section>
         <div class="container">
-            <div class="d-flex">
-                <div class="col">
-                    <img src="../assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="">
-                </div>
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Compliance</h4>
-                    <p class="description">Gringgo has developed a platform for companies to gather data, track and monitor their operations, and to achieve sustainability compliance using defined ESG metrics. This will help you stay compliant with global standards and ensure you stay ahead of the curve.</p>
-                    <a href="how-it-works/sustainability-compliance.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-            </div>
+            <h1 class="title text-active text-center">Sustainability Compliance</h1>
+            <div class="col content-text">
+            <hr class="line-on-top-title">
+            <h4 class="title mt-2 text-center">Keep Your Sustainability In Check With Gringgo</h4>
+            <p class="description mb-2 text-center mb-4">We developed our platform using digital tools to help companies to gather data, as well as tracking and monitoring their operations. Making sure they are working in the best condition to embody sustainability compliance using defined ESG metrics.</p>
+            <h5 class="title mt-2 text-center" style="font-size: 32px;">Being sustainable is more than just doing the right thing <br/>- it's about doing it in a way that benefits everyone</h5>
+            <p class="description mb-2 text-center mb-4" style="font-size: 18px;">We understand that being sustainable can be complex, but we're here to help you get started. Our team of experts has made digital tools in managing and tracking sustainability data, and our platform makes it easy for companies to make sense of their operations and compliance with sustainability regulations.</p>
+            <h5 class="title mt-2 text-center" style="font-size: 32px;">Manage your waste to comply with sustainability regulations.</h5>
+            <p class="description mb-2 text-center mb-4" style="font-size: 18px;">Keep up with sustainability regulations and make sure you're managing your waste in the best way possible. With Sustainability Compliance, you can help your company be environmentally responsible and meet the requirements set by ESG.</p>
+        </div>
         </div>
     </section>
-
-    <section class="section_2_columns_with_image" style="background-color: #D5F9F3;">
-        <div class="container">
-            <div class="d-flex">
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Education on Sustainability</h4>
-                    <p class="description">Our platform facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. As part of the community that care, Gringgo developed a unique gamification methods to help more than 25,000 its users learn about different type of waste and how to deal with them.</p>
-                    <a href="how-it-works/education-on-sustainability.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-                <div class="col">
-                    <img src="../assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section_2_columns_with_image">
-        <div class="container">
-            <div class="d-flex">
-                <div class="col">
-                    <img src="../assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="">
-                </div>
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Program</h4>
-                    <p class="description">One important elements in creating solution for sustainability issue is community, through our platform we reached out to different communities and created different customized program to raise awareness about sustainability. </p>
-                    <a href="how-it-works/sustainability-progmrams.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     
     <footer>
         <div class="container">
