--- a/how-it-works/education-on-sustainability.html
+++ b/how-it-works/education-on-sustainability.html
@@ -45,67 +45,23 @@
         </div>
     </header>
 
-    <section class="section_banner">
-        <div class="container">
-            <div class="d-flex mb-4">
-                <div class="col">
-                    <h2 class="title">How It Works</h2>
-                </div>
-                <div class="col">
-                    <img src="../assets/img/howitworks.png" alt="" style="margin-top: -75px;">
-                </div>
-            </div>
-        </div>
+    <section class="section_banner" style="width: 100%; height: 680px; overflow: hidden; margin-bottom: 3rem; background-image: url('../assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png'); background-size: cover;">
+        
     </section>
 
-    <section class="section_2_columns_with_image">
+    <section>
         <div class="container">
-            <div class="d-flex">
-                <div class="col">
-                    <img src="../assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="">
-                </div>
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Compliance</h4>
-                    <p class="description">Gringgo has developed a platform for companies to gather data, track and monitor their operations, and to achieve sustainability compliance using defined ESG metrics. This will help you stay compliant with global standards and ensure you stay ahead of the curve.</p>
-                    <a href="how-it-works/sustainability-compliance.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-            </div>
+            <h1 class="title text-active text-center">Education on Sustainability</h1>
+            <div class="col content-text">
+            <hr class="line-on-top-title">
+            <h4 class="title mt-2 text-center">Learn how to deal with waste</h4>
+            <p class="description mb-2 text-center mb-4">Gringgo helps people learn how to deal with waste through activities like contests, games, and other fun methods.</p>
+            <h5 class="title mt-2 text-center" style="font-size: 32px;">Gamify the process of learning about sustainability</h5>
+            <p class="description mb-2 text-center mb-4" style="font-size: 18px;">Gringgo is a platform that facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. Gringgo has created a unique gamification methods to help more than 25,000 users learn a  bout different types of waste and how to deal with them.</p>
+            <h5 class="title mt-2 text-center" style="font-size: 32px;">Learn how to reduce waste and change your habits.</h5>
+            <p class="description mb-2 text-center mb-4" style="font-size: 18px;">Education on sustainability is more than learning about the environment—it's building skills, awareness, values and activities around it. Gringgo has developed a unique gamification method to help more than 25,000 users learn about different types of waste.</p>
         </div>
     </section>
-
-    <section class="section_2_columns_with_image" style="background-color: #D5F9F3;">
-        <div class="container">
-            <div class="d-flex">
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Education on Sustainability</h4>
-                    <p class="description">Our platform facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. As part of the community that care, Gringgo developed a unique gamification methods to help more than 25,000 its users learn about different type of waste and how to deal with them.</p>
-                    <a href="how-it-works/education-on-sustainability.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-                <div class="col">
-                    <img src="../assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section_2_columns_with_image">
-        <div class="container">
-            <div class="d-flex">
-                <div class="col">
-                    <img src="../assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="">
-                </div>
-                <div class="col content-text">
-                    <hr class="line-on-top-title" style="float: left;">
-                    <h4 class="title mt-2">Sustainability Program</h4>
-                    <p class="description">One important elements in creating solution for sustainability issue is community, through our platform we reached out to different communities and created different customized program to raise awareness about sustainability. </p>
-                    <a href="how-it-works/sustainability-progmrams.html" class="button-learn-more">LEARN MORE</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     
     <footer>
         <div class="container">
