--- a/products.html
+++ b/products.html
@@ -47,7 +47,30 @@
                         <span>Contact Us</span>
                     </a>
                 </div>
+                <div class="right d-none-desktop" style="margin-top: -10px;" onclick="toggleMenu()">
+                    <img src="assets/img/ic_hamburger.png" alt="">
+                </div>
             </nav>
+            <div class="menu-mobile d-none-desktop d-none" id="menuMobile">
+                <a href="javascript:void(0)" class="menu-item" onclick="toggleMenu()">
+                    <span><strong>X</strong></span>
+                </a>
+                <a href="index.html" class="menu-item">
+                    <span>Home</span>
+                </a>
+                <a href="about.html" class="menu-item">
+                    <span>About Us</span>
+                </a>
+                <a href="howitworks.html" class="menu-item">
+                    <span>How It Works</span>
+                </a>
+                <a href="products.html" class="menu-item">
+                    <span>Services</span>
+                </a>
+                <a href="contactus.html" class="menu-item">
+                    <span>Contact Us</span>
+                </a>
+            </div>
         </div>
     </header>
 
