--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
                         <span>How It Works</span>
                     </a>
                     <a href="products.html" class="menu-item">
-                        <span>Services</span>
+                        <span>Products</span>
                     </a>
                     <a href="contactus.html" class="menu-item">
                         <span>Contact Us</span>
@@ -65,7 +65,7 @@
                     <span>How It Works</span>
                 </a>
                 <a href="products.html" class="menu-item">
-                    <span>Services</span>
+                    <span>Products</span>
                 </a>
                 <a href="contactus.html" class="menu-item">
                     <span>Contact Us</span>
