--- a/howitworks.html
+++ b/howitworks.html
@@ -35,7 +35,7 @@
                         <span>How It Works</span>
                     </a>
                     <a href="products.html" class="menu-item">
-                        <span>Services</span>
+                        <span>Products</span>
                     </a>
                     <a href="contactus.html" class="menu-item text-active">
                         <span>Contact Us</span>
@@ -59,7 +59,7 @@
                     <span>How It Works</span>
                 </a>
                 <a href="products.html" class="menu-item">
-                    <span>Services</span>
+                    <span>Products</span>
                 </a>
                 <a href="contactus.html" class="menu-item">
                     <span>Contact Us</span>
@@ -70,7 +70,7 @@
 
     <section class="section_banner">
         <div class="container">
-            <div class="d-flex mb-4">
+            <div class="d-flex mb-2">
                 <div class="col">
                     <h2 class="title">How It Works</h2>
                 </div>
@@ -87,10 +87,11 @@
                 <div>
                     <img src="assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="" style="width: 100%; height: inherit;">
                 </div>
-                <div class="col content-text">
+                <div class="col content-text mb-2">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Sustainability Compliance</h4>
+                    <h4 class="title mt-1" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 10px;margin-bottom: 20px;color: #232323;">Sustainability Compliance</h4>
                     <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">Gringgo has developed a platform for companies to gather data, track and monitor their operations, and to achieve sustainability compliance using defined ESG metrics. This will help you stay compliant with global standards and ensure you stay ahead of the curve.</p>
+                    <a href="how-it-works/sustainability-compliance.html" class="button-learn-more">LEARN MORE</a>
                 </div>
             </div>
     </section>
@@ -117,10 +118,11 @@
                 <div>
                     <img src="assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="" style="width: 100%; height: inherit;">
                 </div>
-                <div class="col content-text">
+                <div class="col content-text mb-2">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Education on Sustainability</h4>
+                    <h4 class="title mt-1" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 10px;margin-bottom: 20px;color: #232323;">Education on Sustainability</h4>
                     <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">Our platform facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. As part of the community that care, Gringgo developed a unique gamification methods to help more than 25,000 its users learn about different type of waste and how to deal with them.</p>
+                    <a href="how-it-works/education-on-sustainability.html" class="button-learn-more">LEARN MORE</a>
                 </div>
             </div>
     </section>
@@ -147,10 +149,11 @@
                 <div>
                     <img src="assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="" style="width: 100%; height: inherit;">
                 </div>
-                <div class="col content-text">
+                <div class="col content-text mb-2">
                     <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
-                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Sustainability Program</h4>
+                    <h4 class="title mt-1" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 10px;margin-bottom: 20px;color: #232323;">Sustainability Program</h4>
                     <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">One important elements in creating solution for sustainability issue is community, through our platform we reached out to different communities and created different customized program to raise awareness about sustainability. </p>
+                    <a href="how-it-works/sustainability-progmrams.html" class="button-learn-more">LEARN MORE</a>
                 </div>
             </div>
     </section>
