--- a/products/more-sustainable.html
+++ b/products/more-sustainable.html
@@ -35,7 +35,7 @@
                         <span>How It Works</span>
                     </a>
                     <a href="products.html" class="menu-item">
-                        <span>Services</span>
+                        <span>Products</span>
                     </a>
                     <a href="contactus.html" class="menu-item text-active">
                         <span>Contact Us</span>
@@ -59,7 +59,7 @@
                     <span>How It Works</span>
                 </a>
                 <a href="products.html" class="menu-item">
-                    <span>Services</span>
+                    <span>Products</span>
                 </a>
                 <a href="contactus.html" class="menu-item">
                     <span>Contact Us</span>
